# lmnp-tax-engine

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: ci.yml
docs/: architecture.md
lmnp_tax_engine/config/: 2025.yaml
lmnp_tax_engine/core/: engine.py  models.py
tests/: test_engine.py
